welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:5: error: value and is not a member of Boolean
  else if(weekday==true and vacation==true){
                        ^