welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
  if(weekday==false){
    return true
  }
  else if(weekday==true and vacation==true){
    return true
  }
  else{
    return false
  }
}